Updated image path in index.html

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
   <!-- Home Section -->
   <section id="home">
-    <img src="https://github.com/loslax1/Portfolio/raw/main/images/your-image.jpg" alt="My Image" width="200">
+    <img src="332868357_863919388393742_3483137211280686434_n.jpg" alt="My Image" width="200">
     <h1>Hi, I'm Luis ‘Carlos’ Hernandez III</h1>
     <p>A Computer Science student at Benedictine University with a passion for problem-solving, teamwork, and technology.</p>
     <a href="about.html" class="cta-button">Learn More About Me</a>
