--- a/projects.html
+++ b/projects.html
@@ -5,11 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Luis Carlos Hernandez III - Projects</title>
   <link rel="stylesheet" href="styles.css">
+  <!-- AOS Library -->
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body>
   <!-- Navigation Bar -->
   <nav>
-    <ul>
+    <div class="menu-icon" onclick="toggleMenu()">☰</div>
+    <div class="page-title">Projects</div>
+    <ul id="nav-list">
       <li><a href="index.html">Home</a></li>
       <li><a href="about.html">About</a></li>
       <li><a href="experience.html">Experience & Skills</a></li>
@@ -19,21 +23,23 @@
   </nav>
 
   <!-- Projects Section -->
-  <section id="projects">
+  <section id="projects" data-aos="fade-up">
     <h2>Projects</h2>
-    <div class="project">
-      <h3>Home Robotics App (In Progress)</h3>
+    <div class="project" data-aos="fade-up">
+      <h3>Masonry Company Website</h3>
       <p>
-        Developing a full-stack app integrated with an API to place and summon self-driving cars for grocery pickup. Using AI to optimize home tasks, such as placing orders and managing self-driving car pickups.</li>
+        Designed and developed a responsive website for a masonry company to showcase services, past projects, and contact information. Built using HTML, CSS, and JavaScript, with features like mobile-friendly layouts, image galleries, and clear call-to-action sections to improve customer engagement.
       </p>
+      <a href="https://loslax1.github.io/MasonryWebsite/" target="_blank" class="cta-button">View Project</a>
     </div>
-    <div class="project">
+    <div class="project" data-aos="fade-up">
       <h3>Personal Portfolio Website</h3>
       <p>
         Designed and developed a responsive personal portfolio website to showcase my skills, experience, and projects. Built using HTML, CSS, and JavaScript, with features like dark mode, smooth scrolling, etc.
       </p>
-      <a href="index.html" target="_blank" class="project-link">View Project</a>
+      <a href="https://loslax1.github.io/Portfolio/index.html" target="_blank" class="cta-button">View Project</a>
     </div>
+    <a href="contact.html" class="cta-button">Get In Contact With Me</a>
   </section>
 
   <!-- Footer -->
@@ -44,6 +50,12 @@
   <!-- Dark Mode Toggle Button -->
   <button class="dark-mode-toggle">Dark Mode</button>
 
+  <!-- Scripts -->
   <script src="script.js"></script>
+  <!-- AOS Library -->
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
 </body>
 </html>
