--- a/experience.html
+++ b/experience.html
@@ -26,6 +26,28 @@
   <section id="experience" data-aos="fade-up">
     <h2>Experience & Skills</h2>
 
+    <!-- IT Support Services at Benedictine University -->
+    <div class="project" data-aos="fade-up">
+      <h3>IT Support Services at Benedictine University</h3>
+      <p><strong>Lisle, IL | Sept 2025 - Present</strong></p>
+      <ul>
+        <li>Resolved IT support tickets using ticketing software with timely follow-up and documentation.</li>
+        <li> Answered and troubleshot IT-related phone calls, providing first-line technical support.</li>
+        <li>Set up and configured workstations with required hardware and software while assisting staff across campus with IT issues.</li>
+      </ul>
+    </div>
+
+    <!-- Valet/Outreach Driver at InterMountain Health -->
+    <div class="project" data-aos="fade-up">
+      <h3>Valet/Outreach Driver at Intermountain Health</h3>
+      <p><strong>Billings, MT | May 2025 - Aug 2025</strong></p>
+      <ul>
+        <li>Conducted outreach driving for physicians attending out-of-town appointments.</li>
+        <li>Coordinated patient drop-offs and pickups with a focus on timely arrivals, contributing to a decrease in average patient wait time.</li>
+        <li>Managed the safe and efficient parking of hospital patients and visitors, processing over 50 vehicles daily.</li>
+      </ul>
+    </div>
+
     <!-- Order Selector at Sysco -->
     <div class="project" data-aos="fade-up">
       <h3>Order Selector at Sysco</h3>
@@ -46,25 +68,6 @@
         <li>Stocked merchandise on shelves and pallets, using electric pallet jacks to move goods in and out of trailers.</li>
         <li>Assisted with online grocery fulfillment and supported various departments, including the dairy section.</li>
         <li>Retrieved shopping carts and ensured timely completion of tasks across multiple departments.</li>
-      </ul>
-    </div>
-
-    <!-- Pin Chaser at Sunset Bowling -->
-    <div class="project" data-aos="fade-up">
-      <h3>Pin Chaser at Sunset Bowling</h3>
-      <p><strong>Billings, MT | Jul 2020 - Feb 2021</strong></p>
-      <ul>
-        <li>Managed lane assignments and issued bowling shoes to customers, ensuring a smooth customer experience.</li>
-        <li>Maintained bowling machines and resolved pin and ball jams quickly to minimize lane downtime.</li>
-      </ul>
-    </div>
-
-    <!-- Ice Stacker at Polar Ice -->
-    <div class="project" data-aos="fade-up">
-      <h3>Ice Stacker at Polar Ice</h3>
-      <p><strong>Billings, MT | Mar 2018 - Jan 2019</strong></p>
-      <ul>
-        <li>Stacked and transported ice to various locations while adhering to product safety standards.</li>
       </ul>
     </div>
 
@@ -97,4 +100,4 @@
     AOS.init();
   </script>
 </body>
-</html>                       
+</html>                                           
